# lerobot-data-studio

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  run_dev.sh
.github/workflows/: test.yml
scripts/: lint.sh
src/lerobot_data_studio/: __init__.py
src/lerobot_data_studio/backend/: __init__.py  background_tasks.py  main.py  models.py  state_store.py
src/lerobot_data_studio/backend/dataset_creator/: __init__.py  dataset_creator.py  filtered_dataset_creator.py  merged_dataset_creator.py  utils.py
src/lerobot_data_studio/frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src/lerobot_data_studio/frontend/src/: App.tsx  index.css  main.tsx
src/lerobot_data_studio/frontend/src/components/: DataChart.tsx  DatasetCompletionModal.tsx  DatasetViewer.tsx  EpisodeIndexDisplay.tsx  EpisodeNavigation.tsx  EpisodeSidebar.tsx  HomePage.tsx  LoadingIndicator.tsx  MergeDatasets.tsx  TaskManagement.tsx  VideoPlayer.tsx
src/lerobot_data_studio/frontend/src/hooks/: useSelectedEpisodes.ts  useTaskManagement.ts  useVideoPreloader.ts
src/lerobot_data_studio/frontend/src/services/: api.ts
src/lerobot_data_studio/frontend/src/types/: index.ts
src/lerobot_data_studio/frontend/src/utils/: createDataset.ts
src/lerobot_data_studio/frontend/tests/: createDatasetUtil.test.ts  setup.ts
tests/: __init__.py  conftest.py  test_filtered_dataset_creator.py  test_merged_dataset_creator.py  utils.py
tests/template_datasets/v2_1/screwdriver_panel_ls_080225_4_e5/: README.md
tests/template_datasets/v2_1/screwdriver_panel_ls_080225_4_e5/data/chunk-000/: episode_000000.parquet  episode_000001.parquet  episode_000002.parquet  episode_000003.parquet  episode_000004.parquet
tests/template_datasets/v2_1/screwdriver_panel_ls_080225_4_e5/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
