[project]
name = "lerobot-data-studio"
version = "0.1.0"
description = "LeRobot Data Studio - Unofficial LeRobot Dataset Editor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jack Vial", email = "vialjack@gmail.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pandas>=2.1.3",
    "requests>=2.31.0",
    "huggingface-hub>=0.27.1",
    "jsonlines>=4.0.0",
    "lerobot>=0.3.3",
    "numpy>=1.26.2",
    "h5py>=3.10.0",
    "zarr>=2.17.0",
    "opencv-python>=4.9.0",
    "imageio[ffmpeg]>=2.34.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/jackvial/lerobot-data-studio"
Repository = "https://github.com/jackvial/lerobot-data-studio"

# External dependencies inherited from workspace root
# lerobot source defined in root pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_data_studio"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.5",
    "pandas-stubs>=2.1.4",
]

[tool.ruff]
target-version = "py310"
line-length = 110
exclude = ["tests/artifacts/**/*.safetensors", "*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
# E, W: pycodestyle errors and warnings
# F: PyFlakes
# I: isort
# B: flake8-bugbear (good practices, potential bugs)
# C4: flake8-comprehensions (more concise comprehensions)
# T20: flake8-print (discourage print statements in production code)
# N: pep8-naming
# SLF: flake8-self (private member access detection)
# TODO: Add more rules when ready: "SIM", "A", "S", "D", "RUF", "UP"
select = [
    "E", "W", "F", "I", "B", "C4", "T20", "N", "SLF"
]
ignore = [
    "E501", # Line too long
    "T201", # Print statement found
    "T203", # Pprint statement found
    "B008", # Perform function call in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["SLF001"]  # Allow private member access in tests
"**/test_*.py" = ["SLF001", "T201"]  # Allow private member access and print in test files

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["lerobot_data_studio"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# Enforce private member access rules
[tool.ruff.lint.flake8-self]
ignore-names = ["_meta", "_abc_impl"]  # Allow specific private attributes if needed
